fixed body overflow issues.  Styling on AboutMeBackground className element appears to have been the culprit

--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -4,7 +4,7 @@
       /* border-style: solid;
       border-color: grey;  */
       padding: 0px; 
-      width: 100vw; 
+      /* width: 100vw;  */
       /* display: flex;  */
       /* overflow: hidden;  */
       background-size: cover;
